Package_Tools/include-C/Ubuntu_26.04/gstreamer-1.0/gst/zzzz_in_arbeit/pp/gstquery.pp


unit gstquery;
interface

{
  Automatically converted by H2Pas 1.0.0 from gstquery.h
  The following command line parameters were used:
    -p
    -T
    -d
    -c
    -e
    gstquery.h
}

{ Pointers to basic pascal types, inserted by h2pas conversion program.}
Type
  PLongint  = ^Longint;
  PSmallInt = ^SmallInt;
  PByte     = ^Byte;
  PWord     = ^Word;
  PDWord    = ^DWord;
  PDouble   = ^Double;

Type
Pgboolean  = ^gboolean;
Pgchar  = ^gchar;
Pgdouble  = ^gdouble;
Pgint  = ^gint;
Pgint64  = ^gint64;
PGstAllocationParams  = ^GstAllocationParams;
PGstAllocator  = ^GstAllocator;
PGstBufferingMode  = ^GstBufferingMode;
PGstBufferPool  = ^GstBufferPool;
PGstCaps  = ^GstCaps;
PGstClockTime  = ^GstClockTime;
PGstContext  = ^GstContext;
PGstFormat  = ^GstFormat;
PGstQuery  = ^GstQuery;
PGstQueryType  = ^GstQueryType;
PGstQueryTypeFlags  = ^GstQueryTypeFlags;
PGstSchedulingFlags  = ^GstSchedulingFlags;
PGstStructure  = ^GstStructure;
Pguint  = ^guint;
{$IFDEF FPC}
{$PACKRECORDS C}
{$ENDIF}


{ GStreamer
 * Copyright (C) 1999,2000 Erik Walthinsen <omega@cse.ogi.edu>
 *                    2000 Wim Taymans <wim.taymans@chello.be>
 *                    2005 Wim Taymans <wim@fluendo.com>
 *                    2011 Wim Taymans <wim.taymans@gmail.com>
 *
 * gstquery.h: GstQuery API declaration
 *
 * This library is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Library General Public
 * License as published by the Free Software Foundation; either
 * version 2 of the License, or (at your option) any later version.
 *
 * This library is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * Library General Public License for more details.
 *
 * You should have received a copy of the GNU Library General Public
 * License along with this library; if not, write to the
 * Free Software Foundation, Inc., 51 Franklin St, Fifth Floor,
 * Boston, MA 02110-1301, USA.
  }
{$ifndef __GST_QUERY_H__}
{$define __GST_QUERY_H__}
{$include <glib.h>}
{$include <glib-object.h>}
{$include <gst/gstconfig.h>}
{$ifdef _MSC_VER}
(** unsupported pragma#pragma warning(disable: 5287)*)
{$endif}
type
{$include <gst/gstminiobject.h>}
{*
 * GstQueryTypeFlags:
 * @GST_QUERY_TYPE_UPSTREAM:     Set if the query can travel upstream.
 * @GST_QUERY_TYPE_DOWNSTREAM:   Set if the query can travel downstream.
 * @GST_QUERY_TYPE_SERIALIZED:   Set if the query should be serialized with data
 *                               flow.
 *
 * #GstQueryTypeFlags indicate the aspects of the different #GstQueryType
 * values. You can get the type flags of a #GstQueryType with the
 * gst_query_type_get_flags() function.
  }
type
  PGstQueryTypeFlags = ^TGstQueryTypeFlags;
  TGstQueryTypeFlags =  Longint;
  Const
    GST_QUERY_TYPE_UPSTREAM = 1 shl 0;
    GST_QUERY_TYPE_DOWNSTREAM = 1 shl 1;
    GST_QUERY_TYPE_SERIALIZED = 1 shl 2;
;
{*
 * GST_QUERY_TYPE_BOTH: (value 3) (type GstQueryTypeFlags)
 *
 * The same thing as #GST_QUERY_TYPE_UPSTREAM | #GST_QUERY_TYPE_DOWNSTREAM.
  }

{ was #define dname def_expr }
function GST_QUERY_TYPE_BOTH : TGstQueryTypeFlags;  

const
  GST_QUERY_NUM_SHIFT = 8;  
{*
 * GST_QUERY_MAKE_TYPE:
 * @num: the query number to create
 * @flags: the query flags
 *
 * when making custom query types, use this macro with the num and
 * the given flags
  }
{*
 * GstQueryType:
 * @GST_QUERY_UNKNOWN: unknown query type
 * @GST_QUERY_POSITION: current position in stream
 * @GST_QUERY_DURATION: total duration of the stream
 * @GST_QUERY_LATENCY: latency of stream
 * @GST_QUERY_JITTER: current jitter of stream
 * @GST_QUERY_RATE: current rate of the stream
 * @GST_QUERY_SEEKING: seeking capabilities
 * @GST_QUERY_SEGMENT: segment start/stop positions
 * @GST_QUERY_CONVERT: convert values between formats
 * @GST_QUERY_FORMATS: query supported formats for convert
 * @GST_QUERY_BUFFERING: query available media for efficient seeking.
 * @GST_QUERY_CUSTOM: a custom application or element defined query.
 * @GST_QUERY_URI: query the URI of the source or sink.
 * @GST_QUERY_ALLOCATION: the buffer allocation properties
 * @GST_QUERY_SCHEDULING: the scheduling properties
 * @GST_QUERY_ACCEPT_CAPS: the accept caps query
 * @GST_QUERY_CAPS: the caps query
 * @GST_QUERY_DRAIN: wait till all serialized data is consumed downstream
 * @GST_QUERY_CONTEXT: query the pipeline-local context from
 *     downstream or upstream (since 1.2)
 * @GST_QUERY_BITRATE: the bitrate query (since 1.16)
 * @GST_QUERY_SELECTABLE: Query stream selection capability (Since: 1.22)
 *
 * Standard predefined Query types
  }
{ NOTE: don't forget to update the table in gstquery.c when changing
 * this enum  }
{*
   * GST_QUERY_SELECTABLE:
   *
   * Query stream selection capability.
   *
   * Since: 1.22
    }
type
  PGstQueryType = ^TGstQueryType;
  TGstQueryType =  Longint;
  Const
    GST_QUERY_UNKNOWN = GST_QUERY_MAKE_TYPE(0,0);
    GST_QUERY_POSITION = GST_QUERY_MAKE_TYPE(10,_FLAG(BOTH));
    GST_QUERY_DURATION = GST_QUERY_MAKE_TYPE(20,_FLAG(BOTH));
    GST_QUERY_LATENCY = GST_QUERY_MAKE_TYPE(30,_FLAG(BOTH));
    GST_QUERY_JITTER = GST_QUERY_MAKE_TYPE(40,_FLAG(BOTH));
    GST_QUERY_RATE = GST_QUERY_MAKE_TYPE(50,_FLAG(BOTH));
    GST_QUERY_SEEKING = GST_QUERY_MAKE_TYPE(60,_FLAG(BOTH));
    GST_QUERY_SEGMENT = GST_QUERY_MAKE_TYPE(70,_FLAG(BOTH));
    GST_QUERY_CONVERT = GST_QUERY_MAKE_TYPE(80,_FLAG(BOTH));
    GST_QUERY_FORMATS = GST_QUERY_MAKE_TYPE(90,_FLAG(BOTH));
    GST_QUERY_BUFFERING = GST_QUERY_MAKE_TYPE(110,_FLAG(BOTH));
    GST_QUERY_CUSTOM = GST_QUERY_MAKE_TYPE(120,_FLAG(BOTH));
    GST_QUERY_URI = GST_QUERY_MAKE_TYPE(130,_FLAG(BOTH));
    GST_QUERY_ALLOCATION = GST_QUERY_MAKE_TYPE(140,(_FLAG(DOWNSTREAM)) or (_FLAG(SERIALIZED)));
    GST_QUERY_SCHEDULING = GST_QUERY_MAKE_TYPE(150,_FLAG(UPSTREAM));
    GST_QUERY_ACCEPT_CAPS = GST_QUERY_MAKE_TYPE(160,_FLAG(BOTH));
    GST_QUERY_CAPS = GST_QUERY_MAKE_TYPE(170,_FLAG(BOTH));
    GST_QUERY_DRAIN = GST_QUERY_MAKE_TYPE(180,(_FLAG(DOWNSTREAM)) or (_FLAG(SERIALIZED)));
    GST_QUERY_CONTEXT = GST_QUERY_MAKE_TYPE(190,_FLAG(BOTH));
    GST_QUERY_BITRATE = GST_QUERY_MAKE_TYPE(200,_FLAG(DOWNSTREAM));
    GST_QUERY_SELECTABLE = GST_QUERY_MAKE_TYPE(210,_FLAG(BOTH));
;
{$undef _FLAG}
  var
    _gst_query_type : TGType;cvar;external;

const
  GST_TYPE_QUERY = _gst_query_type;  
{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   

function GST_IS_QUERY(obj : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
function GST_QUERY_CAST(obj : longint) : PGstQuery;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_QUERY(obj : longint) : longint;

{*
 * GstQuery:
 * @mini_object: The parent #GstMiniObject type
 * @type: the #GstQueryType
 *
 * The #GstQuery structure.
  }
{< public >  }{ with COW  }
type
  PGstQuery = ^TGstQuery;
  TGstQuery = record
      mini_object : TGstMiniObject;
      _type : TGstQueryType;
    end;

{*
 * GstBufferingMode:
 * @GST_BUFFERING_STREAM: a small amount of data is buffered
 * @GST_BUFFERING_DOWNLOAD: the stream is being downloaded
 * @GST_BUFFERING_TIMESHIFT: the stream is being downloaded in a ringbuffer
 * @GST_BUFFERING_LIVE: the stream is a live stream
 *
 * The different types of buffering methods.
  }

  PGstBufferingMode = ^TGstBufferingMode;
  TGstBufferingMode =  Longint;
  Const
    GST_BUFFERING_STREAM = 0;
    GST_BUFFERING_DOWNLOAD = 1;
    GST_BUFFERING_TIMESHIFT = 2;
    GST_BUFFERING_LIVE = 3;
;
{$include <gst/gstiterator.h>}
{$include <gst/gststructure.h>}
{$include <gst/gstformat.h>}
{$include <gst/gstpad.h>}
{$include <gst/gstallocator.h>}
{$include <gst/gsttoc.h>}
{$include <gst/gstcontext.h>}
(* Const before type ignored *)

function gst_query_type_get_name(_type:TGstQueryType):Pgchar;cdecl;external;
function gst_query_type_to_quark(_type:TGstQueryType):TGQuark;cdecl;external;
function gst_query_type_get_flags(_type:TGstQueryType):TGstQueryTypeFlags;cdecl;external;
function gst_query_get_type:TGType;cdecl;external;
function gst_query_ref(q:PGstQuery):PGstQuery;cdecl;external;
procedure gst_query_unref(q:PGstQuery);cdecl;external;
procedure gst_clear_query(query_ptr:PPGstQuery);cdecl;external;
(* Const before type ignored *)
function gst_query_copy(q:PGstQuery):PGstQuery;cdecl;external;
function gst_query_make_writable(query:PGstQuery):PGstQuery;cdecl;external;
(* Const before type ignored *)
function gst_query_is_writable(query:PGstQuery):Tgboolean;cdecl;external;
function gst_query_replace(old_query:PPGstQuery; new_query:PGstQuery):Tgboolean;cdecl;external;
function gst_query_take(old_query:PPGstQuery; new_query:PGstQuery):Tgboolean;cdecl;external;
function gst_query_steal(old_query:PPGstQuery):PGstQuery;cdecl;external;
{$endif}
{ GST_DISABLE_MINIOBJECT_INLINE_FUNCTIONS  }
{ application specific query  }
